# atlas_kb_bot

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  cli.py
app/bot/: telegram_bot.py
app/common/: __init__.py  committed_cache.py  config.py  json_store.py  logging_utils.py  subprocess_utils.py
app/ingest/: __init__.py  audit_runner.py  chatgpt_detector.py  chatgpt_parser.py  external_review_pack_archiver.py
app/reports/: __init__.py  daily_backup_report.py
scripts/: backup_knowledge_bot_state.sh  restart.sh  run_local_bot.sh
tests/: test_config.py  test_daily_backup_report.py  test_detector.py  test_external_review_pack_archiver.py  test_logging_utils.py  test_telegram_bot.py
